Return false in shouldActivateFailCommandFailPoint if the command does not have a valid namespace

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.4
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 2020-02-24
    • 6
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      shouldActivateFailCommandFailPoint is a predicate function for FailPoint::executeIf so it should never throw an error. With the current code, the function could throw an exception if the invocation does not have a valid namespace. This line should be wrapped in a try/catch and if an exception is caught, the function should return false since we do not want to enable failCommand anyway in that case.

            Assignee:
            Cheahuychou Mao
            Reporter:
            Cheahuychou Mao
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: