SERVER-46045 Return false in shouldActivateFailCommandFailPoint if the command does not have a valid namespace